Bug 1137107 - Part 1: Add NfcRequestType. r=smaug, dimi

From 2c1e87a8e1018f2c1d9f8825e36d1478a8a409bc Mon Sep 17 00:00:00 2001
---
 dom/nfc/gonk/Nfc.js                | 22 ++++++---
 dom/nfc/gonk/NfcGonkMessage.h      |  9 ----
 dom/nfc/gonk/NfcMessageHandler.cpp | 91 +++++++++++++++++++-------------------
 dom/nfc/gonk/NfcOptions.h          |  2 +-
 dom/webidl/NfcOptions.webidl       | 16 ++++++-
 5 files changed, 76 insertions(+), 64 deletions(-)